# linr

./: CMakeLists.txt
example/: CMakeLists.txt
example/source/: bench.cpp  bufread.cpp  custom_type.cpp  example.cpp  print.hpp
include/linr/: buf_read.hpp  common.hpp  parser.hpp  read.hpp  util.hpp
include/linr/detail/: default_parser.hpp  line_reader.hpp  read.hpp
test/: CMakeLists.txt  test.input
test/source/: test.cpp
